--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 						<h1><a href="index.html">Maisie Liu</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="about.html">About Me</a></li>
+								<li><a href="blog.html">Blog</a></li>
+								<li><a href="project.html">Projects</a></li>
+								<li><a href="#">Business Intelligence</a></li>
+								<li><a href="#">People Analytics</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -86,7 +86,7 @@
 						<!-- Actions -->
 							<section>
 								<ul class="actions stacked">
-									<li><a href="#" class="button large fit">Log In</a></li>
+									<li><a href="mailto:maisieliu2000@gmail.com" class="button large fit">Contact Me</a></li>
 								</ul>
 							</section>
 
