successfully made project rows

--- a/project.html
+++ b/project.html
@@ -24,8 +24,7 @@
 								<li><a href="about.html">About Me</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="project.html">Projects</a></li>
-								<li><a href="#">Business Intelligence</a></li>
-								<li><a href="#">People Analytics</a></li>
+								<li><a href="#">Personal Life</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -107,10 +106,8 @@
 								<span class="name">Maisie Liu</span>
 							</div>
 						</header>
-						<span class="image featured">
-							<img src="images/pic01.jpg" alt="" />
-						</span>
 						<p>
+							Here are some work I did both professionally and academically. 
 							This is your main highlighted project. Use this area to explain the
 							business problem, data process, and final results.
 						</p>
@@ -120,9 +117,9 @@
 					<section>
 						<div class="row">
 
-							<div class="col-4 col-12-medium">
+							<div class="aln-center">
 								<article>
-									<h3>People Analytics Dashboard</h3>
+									<h3>People Analytics Projects</h3>
 									<p>Attrition prediction and HR analytics dashboard.</p>
 									<ul class="actions">
 										<li><a href="single.html" class="button">View</a></li>
@@ -130,9 +127,9 @@
 								</article>
 							</div>
 
-							<div class="col-4 col-12-medium">
+							<div class="aln-center">
 								<article>
-									<h3>Sales BI Dashboard</h3>
+									<h3>Business Intelligence Projects</h3>
 									<p>Revenue forecasting and regional KPI monitoring.</p>
 									<ul class="actions">
 										<li><a href="single.html" class="button">View</a></li>
@@ -140,9 +137,9 @@
 								</article>
 							</div>
 
-							<div class="col-4 col-12-medium">
+							<div class="aln-center">
 								<article>
-									<h3>Supply Chain Optimization</h3>
+									<h3>Data Science Projects</h3>
 									<p>Inventory and logistics performance analytics.</p>
 									<ul class="actions">
 										<li><a href="single.html" class="button">View</a></li>
