--- a/about.html
+++ b/about.html
@@ -21,11 +21,10 @@
 						<h1><a href="index.html">Maisie Liu</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">About Me</a></li>
-								<li><a href="#">Blog</a></li>
-								<li><a href="#">Data Science</a></li>
-								<li><a href="#">Business Intelligence</a></li>
-								<li><a href="#">People Analytics</a></li>
+								<li><a href="about.html">About Me</a></li>
+								<li><a href="blog.html">Blog</a></li>
+								<li><a href="project.html">Projects</a></li>
+								<li><a href="#">Personal Life</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
