--- a/blog.html
+++ b/blog.html
@@ -24,8 +24,7 @@
 								<li><a href="about.html">About Me</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="project.html">Projects</a></li>
-								<li><a href="#">Business Intelligence</a></li>
-								<li><a href="#">People Analytics</a></li>
+								<li><a href="#">Personal Life</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
