successfully made project rows_2

--- a/project.html
+++ b/project.html
@@ -117,7 +117,7 @@
 					<section>
 						<div class="row">
 
-							<div class="aln-center">
+							<div class="col-4 col-12-large">
 								<article>
 									<h3>People Analytics Projects</h3>
 									<p>Attrition prediction and HR analytics dashboard.</p>
@@ -127,7 +127,7 @@
 								</article>
 							</div>
 
-							<div class="aln-center">
+							<div class="col-4 col-12-large">
 								<article>
 									<h3>Business Intelligence Projects</h3>
 									<p>Revenue forecasting and regional KPI monitoring.</p>
@@ -137,7 +137,7 @@
 								</article>
 							</div>
 
-							<div class="aln-center">
+							<div class="col-4 col-12-large">
 								<article>
 									<h3>Data Science Projects</h3>
 									<p>Inventory and logistics performance analytics.</p>
