last updates on Feb 9

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="project.html">Projects</a></li>
 								<li><a href="#">Personal Life</a></li>
-								<li><a href="#">People Analytics</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -609,7 +608,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<h2>About</h2>
 								<p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod amet placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at phasellus sed ultricies.</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
+									<li><a href="about.html" class="button">Learn More</a></li>
 								</ul>
 							</section>
 
