--- a/single.html
+++ b/single.html
@@ -58,26 +58,26 @@
 								<ul class="links">
 									<li>
 										<a href="#">
-											<h3>Lorem ipsum</h3>
-											<p>Feugiat tempus veroeros dolor</p>
+											<h3>Personal Life</h3>
+											<p>I am a photographer in my free time! Here is my photo gallery.</p>
 										</a>
 									</li>
 									<li>
-										<a href="#">
-											<h3>Dolor sit amet</h3>
-											<p>Sed vitae justo condimentum</p>
+										<a href="project.html">
+											<h3>People Analytics Projects</h3>
+											<p>Check this out! Thoughts on some up-to-date and creative analyses on people data!</p>
 										</a>
 									</li>
 									<li>
-										<a href="#">
-											<h3>Feugiat veroeros</h3>
-											<p>Phasellus sed ultricies mi congue</p>
+										<a href="project.html">
+											<h3>Data Science Projects</h3>
+											<p>Applying data analytics and machine learning methods in real world problems 🤖</p>
 										</a>
 									</li>
 									<li>
-										<a href="#">
-											<h3>Etiam sed consequat</h3>
-											<p>Porta lectus amet ultricies</p>
+										<a href="project.html">
+											<h3>Business Intelligence Projects</h3>
+											<p>Understanding real world problems with data visualization and creative dashboards</p>
 										</a>
 									</li>
 								</ul>
