--- a/project.html
+++ b/project.html
@@ -57,31 +57,31 @@
 								<ul class="links">
 									<li>
 										<a href="#">
-											<h3>Lorem ipsum</h3>
-											<p>Feugiat tempus veroeros dolor</p>
+											<h3>Personal Life</h3>
+											<p>I am a photographer in my free time! Here is my photo gallery.</p>
 										</a>
 									</li>
 									<li>
-										<a href="#">
-											<h3>Dolor sit amet</h3>
-											<p>Sed vitae justo condimentum</p>
+										<a href="project.html">
+											<h3>People Analytics Projects</h3>
+											<p>Check this out! Thoughts on some up-to-date and creative analyses on people data!</p>
 										</a>
 									</li>
 									<li>
-										<a href="#">
-											<h3>Feugiat veroeros</h3>
-											<p>Phasellus sed ultricies mi congue</p>
+										<a href="project.html">
+											<h3>Data Science Projects</h3>
+											<p>Applying data analytics and machine learning methods in real world problems 🤖</p>
 										</a>
 									</li>
 									<li>
-										<a href="#">
-											<h3>Etiam sed consequat</h3>
-											<p>Porta lectus amet ultricies</p>
+										<a href="project.html">
+											<h3>Business Intelligence Projects</h3>
+											<p>Understanding real world problems with data visualization and creative dashboards</p>
 										</a>
 									</li>
 								</ul>
 							</section>
-
+							
 						<!-- Actions -->
 							<section>
 								<ul class="actions stacked">
@@ -110,7 +110,7 @@
 							This section showcases my work across People Analytics, Business Intelligence, and Data Science, 
 							where I turn complex data into clear business insights and actionable decisions. 
 							Each project highlights a real-world problem, the data and analytical approach used, 
-							and the measurable outcomes achieved — from workforce analytics and predictive modeling to dashboard development and performance optimization.
+							and the measurable outcomes achieved — from workforce analytics and predictive modeling to dashboard development and performance optimization.<br>
 							
 							Explore each category to see how I apply analytics, visualization, and data-driven thinking to solve operational challenges, 
 							improve decision-making, and create practical business value.
