--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<li>
 										<a href="#">
 											<h3>Personal Life</h3>
-											<p>I am a photographer in my free time! Here is my photo gallery.</p>
+											<p>I am a photographer 📸 in my free time! Here is my photo gallery 🎞️.</p>
 										</a>
 									</li>
 									<li>
