--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
 										<a href="#" class="author"><span class="name">Maisie Liu</span><img src="images/avatar.png" alt="" width="400"/></a>
 									</div>
 								</header>
-								<span class="image"><img src="images/IMG_2055.jpeg" alt="" width="60%" /></span>
+								<span class="image featured"><img src="images/IMG_2056.jpeg" alt="" /></span>
 								<p> Hello everyone, or I should say 你好! My name is Maisie Liu (劉小嫚), currently completing my Masters of Science in Information Management
 									at the University of Washington! Go Dawgs! Forgot to mention, I am from Taiwan, where boba milk tea orginated. So you can see me holding
 									a boba in my little avatar🧋🙋🏻‍♀️. This is my 7th year studying abroad and my 5th year in Seattle, WA and I am excited to either relocate to
