ds_project1 update

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="project.html">
+										<a href="project_ds.html">
 											<h3>Data Science Projects</h3>
 											<p>Applying data analytics and machine learning methods in real world problems 🤖</p>
 										</a>
